@@ -1783,6 +1783,10 @@ block|,
 literal|"4.10.4-cfs"
 block|,
 literal|"4.10.4-nocfs"
+block|,
+literal|"5x-with-4x-segments-cfs"
+block|,
+literal|"5x-with-4x-segments-nocfs"
 block|}
 decl_stmt|;
 DECL|field|oldSingleSegmentNames
@@ -5480,7 +5484,9 @@ argument_list|)
 operator|.
 name|setMergePolicy
 argument_list|(
-name|mp
+name|NoMergePolicy
+operator|.
+name|INSTANCE
 argument_list|)
 decl_stmt|;
 name|IndexWriter
@@ -5592,7 +5598,9 @@ argument_list|)
 operator|.
 name|setMergePolicy
 argument_list|(
-name|mp
+name|NoMergePolicy
+operator|.
+name|INSTANCE
 argument_list|)
 expr_stmt|;
 name|writer
