@@ -242,6 +242,20 @@ name|lucene
 operator|.
 name|store
 operator|.
+name|DataInput
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
 name|DataOutput
 import|;
 end_import
@@ -1043,6 +1057,24 @@ name|length
 argument_list|)
 expr_stmt|;
 block|}
+elseif|else
+if|if
+condition|(
+name|hasID
+operator|==
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|IndexFormatTooOldException
+argument_list|(
+name|input
+argument_list|,
+literal|"Segment is from Lucene 4.x"
+argument_list|)
+throw|;
+block|}
 else|else
 block|{
 throw|throw
@@ -1060,14 +1092,9 @@ block|}
 name|Codec
 name|codec
 init|=
-name|Codec
-operator|.
-name|forName
+name|readCodec
 argument_list|(
 name|input
-operator|.
-name|readString
-argument_list|()
 argument_list|)
 decl_stmt|;
 name|SegmentInfo
@@ -1407,39 +1434,145 @@ argument_list|(
 name|input
 argument_list|)
 expr_stmt|;
-comment|// LUCENE-6299: check we are in bounds
+return|return
+name|infos
+return|;
+block|}
+block|}
+DECL|field|unsupportedCodecs
+specifier|private
+specifier|static
+specifier|final
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|unsupportedCodecs
+init|=
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|"Lucene3x"
+argument_list|,
+literal|"Lucene40"
+argument_list|,
+literal|"Lucene41"
+argument_list|,
+literal|"Lucene42"
+argument_list|,
+literal|"Lucene45"
+argument_list|,
+literal|"Lucene46"
+argument_list|,
+literal|"Lucene49"
+argument_list|,
+literal|"Lucene410"
+argument_list|)
+decl_stmt|;
+DECL|method|readCodec
+specifier|private
+specifier|static
+name|Codec
+name|readCodec
+parameter_list|(
+name|DataInput
+name|input
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+specifier|final
+name|String
+name|name
+init|=
+name|input
+operator|.
+name|readString
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+return|return
+name|Codec
+operator|.
+name|forName
+argument_list|(
+name|name
+argument_list|)
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+comment|// give better error messages if we can, first check if this is a legacy codec
 if|if
 condition|(
-name|totalDocs
-operator|>
-name|IndexWriter
+name|unsupportedCodecs
 operator|.
-name|getActualMaxDocs
-argument_list|()
+name|contains
+argument_list|(
+name|name
+argument_list|)
+condition|)
+block|{
+name|IOException
+name|newExc
+init|=
+operator|new
+name|IndexFormatTooOldException
+argument_list|(
+name|input
+argument_list|,
+literal|"Codec '"
+operator|+
+name|name
+operator|+
+literal|"' is too old"
+argument_list|)
+decl_stmt|;
+name|newExc
+operator|.
+name|initCause
+argument_list|(
+name|e
+argument_list|)
+expr_stmt|;
+throw|throw
+name|newExc
+throw|;
+block|}
+comment|// or maybe it's an old default codec that moved
+if|if
+condition|(
+name|name
+operator|.
+name|startsWith
+argument_list|(
+literal|"Lucene"
+argument_list|)
 condition|)
 block|{
 throw|throw
 operator|new
-name|CorruptIndexException
+name|IllegalArgumentException
 argument_list|(
-literal|"Too many documents: an index cannot exceed "
+literal|"Could not load codec '"
 operator|+
-name|IndexWriter
-operator|.
-name|getActualMaxDocs
-argument_list|()
+name|name
 operator|+
-literal|" but readers have total maxDoc="
-operator|+
-name|totalDocs
+literal|"'.  Did you forget to add lucene-backward-codecs.jar?"
 argument_list|,
-name|input
+name|e
 argument_list|)
 throw|;
 block|}
-return|return
-name|infos
-return|;
+throw|throw
+name|e
+throw|;
 block|}
 block|}
 comment|/** Find the latest commit ({@code segments_N file}) and    *  load all {@link SegmentCommitInfo}s. */
